load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "unittest-cpp",
    srcs = glob(
        [
            "*.cpp",
            "Posix/*.cpp",
        ],
    ),
    hdrs = glob(
        [
            "*.h",
            "Posix/*.h",
        ],
    ),
    includes = ["."],
)
